@@ -1,4 +1,5 @@
-* BUG#6837 Ajouter message d'erreur sur nouvel avenant quand le statut du contract est incompatible avec les avenants
+* BUG#6867 Ajouter message d'erreur sur nouvel avenant quand le statut du contract est incompatible avec les avenants.
+* BUG#6837 Ajouter une methode qui verifie les statuts des contracts.
 * BUG#6822 Correction de la traduction de start date dans l'avenant de changement de date d'effet
 * BUG#6636 Correction d'un crash en cas de gestion des garanties sur un contrat ayant des garanties sans effet
 * Ajout de la possibilité de passer sans effet un contrat qui a déjà été renouvellé
