@@ -1,4 +1,5 @@
-* BUG#6837 Add an error message on endorsement when the contract status is incompatible with endorsements
+* BUG#6867 Add an error message on endorsement when the contract status is incompatible with endorsements.
+* BUG#6837 Add a method that checks the contract status.
 * BUG#6822 Change start date translation in change start date endorsement
 * BUG#6636 Fix a crash when managing options of a contract with existing void options
 * Allow to void an already renewed contract
